--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "lv-encoder-lvproject": "./lib/index.js"
   },
   "scripts": {
-    "rebuild": "rm -rf ./lib && tsc -p .",
-    "version-bump": "npm run rebuild && git commit -a -m 'version bump' && npm version patch -m 'version bump' && npm publish"
+    "rebuild": "rm -rf ./lib && tsc -p ."
   },
   "dependencies": {
     "@lv-game-editor/lv-cli": "^1.0.17",
